adds column types and separates render data

--- a/public/index.html
+++ b/public/index.html
@@ -26,13 +26,13 @@ table.setColumns([
     {title: 'User Name', key: 'userName'},
     {title: 'Phone Number', key: 'phoneNumber'},
     {title: 'Email', key: 'email'},
-    {title: 'Amount', key: 'amount'},
+    {title: 'Amount', key: 'amount', type: Table.ColumnTypes.number},
 
     {title: 'Catch Phrase', key: 'catchPhrase'},
     {title: 'Company Name', key: 'companyName'},
 
-    {title: 'Created Date', key: 'createdDate'},
-    {title: 'Modified Date', key: 'modifiedDate'},
+    {title: 'Created Date', key: 'createdDate', type: Table.ColumnTypes.date},
+    {title: 'Modified Date', key: 'modifiedDate', type: Table.ColumnTypes.date},
 
     {title: 'Title', key: 'title'},
     {title: 'Job Title', key: 'jobTitle'},
